update docs for 4.16.  JBTM-994
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_15_0_Final@37770 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaJTA/INSTALL
+++ b/ArjunaJTA/INSTALL
@@ -1,6 +1,6 @@
 
-JBossTS 4.15 is designed for use standalone.
-It is also used by JBossAS 7 beta releases, but manual upgrading of the component inside JBossAS is not recommended.
+JBossTS 4.16 is designed for use standalone.
+It may also be used by JBossAS 7.1 releases, but manual upgrading of the component inside JBossAS is not recommended.
 Integration with JBossAS 6 or earlier is no longer supported.
 
 
