--- a/ArjunaJTS/INSTALL
+++ b/ArjunaJTS/INSTALL
@@ -1,7 +1,6 @@
 
-JBossTS 4.15 is designed for use standalone.
-The JTA is also used by JBossAS 7 beta releases, but manual upgrading of the component inside JBossAS is not recommended.
- JTS and XTS are not currently available in AS7.
+JBossTS 4.16 is designed for use standalone.
+It may also be used by JBossAS 7.1 releases, but manual upgrading of the component inside JBossAS is not recommended.
 Integration with JBossAS 6 or earlier is no longer supported.
 
 
