--- a/blacktie/blacktie/README
+++ b/blacktie/blacktie/README
@@ -1,5 +1,5 @@
 JBoss, Home of Professional Open Source
-Copyright 2008, Red Hat, Inc., and others contributors as indicated
+Copyright 2010, Red Hat, Inc., and others contributors as indicated
 by the @authors tag. All rights reserved.
 See the copyright.txt in the distribution for a
 full listing of individual contributors.
@@ -14,5 +14,26 @@ v.2.1 along with this distribution; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 MA  02110-1301, USA.
 
-Please visit https://www.jboss.org/community/wiki/BuildingBlacktie for 
-information on building BlackTie
+# Installing Blacktie into JBoss AS
+
+1. Install a WildFly build
+Download from https://ci.jboss.org/hudson/job/WildFly-latest-master/ and unzip
+
+2. Install the BlackTie subsystem into WildFly
+unzip wildfly-blacktie-build-${VERSION}-bin.zip into ${WILDFLY_LOCATION}
+
+3. Install the BlackTie administration services into WildFly
+copy blacktie-admin-services-ear-*.ear to dir ${WILDFLY_LOCATION}/standalone/deployments
+
+4. Make changes as defined in:
+https://github.com/jbosstm/narayana/blob/5.0.0.M9-SNAPSHOT/blacktie/scripts/hudson/initializeJBoss.xml
+
+# Configuring BlackTie
+
+Edit the setenv.[sh|bat] file as appropriate
+
+# Quickstarts
+
+These can be obtained from http://github.com/jbosstm/quickstart
+
+
